# more_audio_hack

./: .env.example  Dockerfile  Makefile  README.md  client_offline_test.py  docker-compose.yaml  docker-compose.yml  main.py  measure_latency.py  mypy.ini  requirements.txt
app/: asr_gateway.py  asr_riva_client.py  ats.py  config.py  context.py  contracts.py  dialog_manager.py  features.py  hr_embeddings.py  ie.py  ie_extractor.py  jd_matcher.py  llm_client.py  main.py  match.py  normalize.py  obs.py  parsers.py  rag.py  report.py  riva_asr.py  rubric.py  schemas.py  scorer.py  scoring.py  title_normalizer.py  tts.py  tts_local.py
common/: audio.py
config/: scoring.yaml
data/: jd_ml_engineer.json  skills_taxonomy.csv
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  ASR_TTS.md  CONTRIBUTING.md  ENV_VARS.md  FAQ.md  IE_MATCHING.md  KNOWN_ISSUES.md  OBSERVABILITY.md  OPERATIONS_RUNBOOK.md  SCHEMAS.md  SCORING.md  SECURITY_GDPR.md  SETUP_DOCKER.md  SETUP_LOCAL.md  TESTING_QA.md  TROUBLESHOOTING.md
rt_echo/: README.md  __init__.py  pyproject.toml
rt_echo/client/: __init__.py  audio_io.py  player.py  ws_client.py
rt_echo/common/: __init__.py  audio.py  config.py
rt_echo/server/: asr.py  buffer.py  session.py  tts_piper.py  tts_silero.py  ws_server.py
scripts/: smoke_e2e.py
server/: Dockerfile  Dockerfile.gpu  asr.py  requirements.gpu.txt  requirements.txt  server.py  session.py  stabilizer.py  tts.py  tts_piper.py  tts_silero.py  vad.py
tests/: __init__.py  test_asr_pipeline.py  test_ats_mock.py  test_ats_real.py  test_ats_sync.py  (+36 more)
(+22 files in other folders)
