[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rt_echo"
version = "0.1.0"
description = "Real-time echo project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper",
  "sounddevice",
  "numpy",
  "websockets",
  "webrtcvad",
  "onnxruntime",
  "piper-phonemize"
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]
